--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,10 @@
     --bg-color2: rgb(127, 255, 212);
     --bg-color3: rgb(16, 141, 108);
     --border-color: rgba(139, 139, 139, 0.758);
-    --font-color: #a32c2c;
-    --font-color2:  #d7ac61;
-    --font-color3: #cf4141;
-    --font-precio: rgba(187, 185, 185, 0.913);
+    --font-color: #ca3737;
+    --font-color2:  #f7c973;
+    --font-color3: #e64949;
+    --font-precio: rgba(255, 248, 248, 0.913);
 
     --h1-min: 2rem;
     --h1-ideal: 1.147rem + 3.210vw;
@@ -58,6 +58,7 @@ body {
         "main"
         "footer";
 }
+
 
 /*NAVEGADOR PRINCIPAL*/
 nav{
@@ -113,7 +114,7 @@ nav li a:hover{
 
 nav li a[aria-current="page"]{                                               
     color: var(--font-color3);                                                                             
-  }      
+}      
 
 header{
     background-image: url(../img/banner.jpg);
@@ -148,6 +149,7 @@ h2{
     color: var(--font-color2);
 }
 
+
 /*MAIN*/
 main{
     display: grid;
@@ -156,6 +158,7 @@ main{
     justify-self: center;
     overflow: hidden;
 }
+
 
 /* TOP SELLERS / COLLECTORS*/
 #contenedor-top-sellers,
@@ -202,7 +205,7 @@ main{
 .tarjeta-precio figure>img{
     width: 100%;
     object-fit: contain;
-
+    box-shadow: 2px 1px 4px var(--font-color3);
 }
 
 .tarjeta-precio>div button{
@@ -245,6 +248,58 @@ main{
 }
 
 
+/* CATALOGO */
+section h3{
+    color: var(--font-color2);
+    font-family: var(--font-text);
+    text-transform: uppercase;
+    font-weight: bolder;
+    border-bottom: 2px solid var(--font-color2);
+    margin-bottom: 0.7rem;
+    margin-top: 1rem;
+
+}
+
+.catalogo section div {
+    display: inline-block;
+    border: 1px solid crimson;
+    max-width: 45%;
+    min-height: 55vh;
+    gap: 3rem;
+
+}
+
+.catalogo figure{
+    justify-content: center;
+    align-items: center;
+}
+
+div figure img{
+    width: 100%;
+    height: 100%;
+}
+
+div figcaption{
+    color: var(--font-color2);
+    font-weight: bolder;
+}
+
+section div p{
+    color: var(--font-precio);
+    font-family: var(--font-text);
+    margin-bottom: 0.2rem;
+    text-align: left;
+}
+
+section div button{
+    color: var(--font-color2);
+    background-color: transparent;
+    text-transform: uppercase;
+    border: none;
+    margin-bottom: 0.4rem;
+}
+
+
 /* FORM /INPUTS */
 fieldset{
     border: none;
@@ -254,15 +309,11 @@ fieldset{
 label{
     color: var(--font-precio);
     display: block;
-    margin-bottom: 0.4rem;
 }
 
 input,textarea{
     border: none;
     border-bottom: 1px solid var(--font-precio);
-    padding: 0.5rem;
-    border-radius: 5px;
-    width: 100%;
 }
 
 
@@ -278,22 +329,24 @@ fieldset button:hover{
     background-color: var(--font-color2);
 }
 
-
 /*FOOTER*/
 footer{
     color: var(--font-precio);
     background-color: var(--bg-color);
     grid-area: footer;
-    justify-items: center;
-    align-content: center;
+    display: flex;
+    align-content: space-evenly;
+    margin-top: 1rem;
 }
+
 
 footer img{
     border-radius: 60px;
+    width: 80%;
+    height: 45%;
 }
 
 /*MEDIA-Q TABLET*/
-
 @media(min-width: 768px){
     #contenedor-top-sellers,
     #contenedor-collector-items{
@@ -307,9 +360,9 @@ footer img{
         flex-direction: row;
     }
 }
+
 
 /*MEDIA-Q DESKTOP*/
-
 @media(min-width: 1024px){
     #contenedor-top-sellers,
     #contenedor-collector-items{
@@ -375,4 +428,3 @@ footer img{
         width: 70%;
     }
 }
-
