--- a/css/style.css
+++ b/css/style.css
@@ -355,8 +355,6 @@ main{
 
 .catalogo section div {
     display: block;
-    /* max-width: 40%;
-    max-height: 50%; */
     object-fit: contain;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
@@ -402,18 +400,19 @@ main{
 
 .contacto p{
     color: var(--font-precio);
+    font-weight: bold;
 }
 
 fieldset{
     border: none;
     text-transform: uppercase;
+    
 }
 
 label{
     color: var(--font-precio);
     display: block;
 }
-
 
 input{
     width: 100%;
@@ -453,6 +452,15 @@ fieldset button:hover{
     background-color: var(--bg-color3);
 }
 
+.contacto section:last-child div{
+    border-left: 2px solid var(--font-color2);
+    padding-left: 0.4rem;
+}
+
+iframe{
+    margin-top: 0.6rem;
+    border-radius: 2px;
+}
 /* Añadir ACTION y INPUT FIELD COLOR */
 
 
