--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
     --font-color2:  #f7c973;
     --font-color3: #e64949;
     --font-gris: rgb(150, 148, 148);
+    --font-gris-claro: rgb(185, 183, 183);
 
     --h1-min: 2rem;
     --h1-ideal: 1.400rem + 3.000vw;
@@ -198,7 +199,7 @@ h2{
 
 
 h3{
-    color: var(--font-color);
+    color: var(--font-gris-claro);
     font-family: var(--font-titular2);
     font-size: clamp(var(--h3-section-min), var(--h3-section-ideal), var(--h3-section-max));
     letter-spacing: 0.1rem;
@@ -207,7 +208,6 @@ h3{
     margin-bottom: 0.8rem;
     margin-top: 0.8rem;
 }
-
 
 
 /*MAIN*/
@@ -267,11 +267,13 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-items: center;
     gap: 0.5rem;
     flex: 1 1 100%;
 }
 .noticia>h3{
     order:1;
+    color: var(--font-gris-claro);
 }
 
 .noticia>figure{
@@ -392,10 +394,6 @@ main figure>img{
     color: var(--font-gris);
 }
 
-.noticia>h3{
-    color: var(--border-color);
-
-}
 
 /* CATALOGO */
 .catalogo h3{
@@ -555,6 +553,10 @@ iframe{
 
 .talento>div p{
     font-size: clamp(var(--p-min), var(--p-ideal), var(--p-max));
+}
+
+.talento>div h3{
+    color: var(--font-gris-claro);
 }
 
 
