--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ header{
     scroll-snap-align: start;
 }
 
+/* IMG BANNER */
 #shila{
     object-position: 75%;
 }
@@ -172,7 +173,6 @@ header{
     object-position: 63%;
 
 }
-
 
 
 h1{
@@ -244,6 +244,15 @@ h3{
     
     margin-bottom: 0.8rem;
     margin-top: 0.8rem;
+}
+
+/* Añado selector para el boton "Enviar publicacion" del main */
+button a{
+    color: var(--font-gris-claro);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+
 }
 
 
@@ -494,10 +503,11 @@ button:hover{
 
 
 /* CONTACTO FORM /INPUTS */
-.contacto form{
+
+/* .contacto form{
     border: 1px solid crimson;
-    object-fit: contain;
-}
+} */
+
 .contacto section:first-child{
     margin-bottom: 1.2rem;
     width: 45%;
@@ -512,7 +522,6 @@ button:hover{
     font-weight: bold;
 }
 
-
 fieldset{
     border: none;
     text-transform: uppercase;
@@ -521,17 +530,17 @@ fieldset{
 label{
     color: var(--font-gris-claro);
     display: block;
-    margin-bottom: 0.1rem;
+    margin-bottom: 0.2rem;
 }
 
 input{
-    width: 100%;
-    padding: 0.6rem;
-    
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
 }
 
 ::placeholder{
     text-transform: uppercase;
+
 }
 
 input,textarea{
@@ -540,34 +549,17 @@ input,textarea{
     border-bottom: 1px solid var(--font-gris);
     background-color: var(--bg-color);
     margin-bottom: 0.5rem;
+    width: 100%;
 }
 
 textarea{
     border-left: 1px solid var(--font-gris-claro);
-    
 }
 
 fieldset button{
     width: 100%;
 }
 
-/* fieldset button{
-    color: var(--bg-color);
-    background-color: var(--font-color2);
-    border: none;
-    border-radius: 4px;
-    padding: 1rem;
-    width: 100%;
-    padding-left: 0;
-    font-weight: bolder;
-    text-transform: uppercase;
-    transition: background-color 0.4s ease, color 0.4s ease;
-}
-
-fieldset button:hover{
-    color: var(--font-gris-claro);
-    background-color: var(--bg-color3);
-} */
 
 .contacto address{
     border-left: 2px solid var(--font-color2);
@@ -680,8 +672,24 @@ footer>p{
 }
 
 
+
+
 /*M: Hay que mirar los contenedores del catalago porque tienen mucho MARGIN */
 /*MEDIA-Q TABLET*/
+
+/*Añado query para la página de CONTACTO */
+@media(max-width: 500px){
+
+    .contacto section:first-child{
+
+    width: 100%;
+}
+
+.contacto section:last-child{
+    width: 100%;
+}
+}
+
 @media(min-width: 768px){
 
 
@@ -742,7 +750,12 @@ footer>p{
         text-align: left;
     }
 
-    form{
+    .contacto section:first-child{
+
+    width: 100%;
+}
+
+    .contacto section:last-child{
     width: 100%;
     }
 }
