--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ main{
     order:2;
 }
 
-.noticia>button{
+.boton-noticias{
     order:3;
 }
 
@@ -416,7 +416,7 @@ main figure>img{
     transform: scale(1.25);
 }
 
-button{
+button, .boton-noticias{
     text-align: center;
     width: 70%;
     border-radius: 1rem;
@@ -434,11 +434,12 @@ button{
     align-self: flex-end;
 
 }
-.contenedor>.noticia button{
+.boton-noticias{
+    text-decoration: none;
     width: 100%;
 }
 
-button:hover{
+button:hover, .boton-noticias:hover{
     cursor: pointer;
     background-color: var(--bg-color3);
     color: var(--font-gris-claro);
@@ -655,13 +656,14 @@ footer{
 #contenedor-footer>h2{
     grid-column: 1 / -1;
     color: var(--font-color);
-    font-family: var(--font-titular);
+    font-family: var(--font-titular2);
 }
 
 #contenedor-footer>div h3{
     margin: 0;
     border: none;
     color: #f7c973;
+    
 }
 
 footer ul>li a{
